# ComfyUI-Sidecar

./: .gitignore  .prettierrc  Makefile  README.md  go.mod  go.sum  index.html  main.go  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  wails.json
bridge/: app.go  mainaa.go
frontend/: index.html  package.json  package.json.md5  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/ui/: calendar.tsx
frontend/src/pages/: chat.tsx  environment.tsx  home.tsx  settings.tsx  versions.tsx
frontend/src/utils/: store.ts
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/bridge/: App.d.ts  App.js  TerminalApp.d.ts  TerminalApp.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cmd/: file.rs  git.rs  mod.rs  terminal.rs
src-tauri/src/git_plus/: mod.rs
src-tauri/src/utils/: git.rs  mod.rs
src-tauri/src/web/: mod.rs
src/components/ui/: chart.tsx
src/pages/: chat.tsx  docs.tsx  environment.tsx  help.tsx  home.tsx  models.tsx  settings.tsx  versions.tsx
src/utils/: store.ts  text.ts  time.ts
