[package]
name = "comfyui-sidecar"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "comfyui_sidecar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.3", features = ["default"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gix = { version = "0.66.0" }
gix-traverse = "0.41.0"
gix-hash = "0.14.2"
gix-object = "0.44.0"
tauri-plugin-log = "2"
log = "0.4.22"
env_logger = "0.11.5"
anyhow = "1.0.89"
tokio = { version = "1.14.0", features = ["full"] }
axum = { version = "0.7.5", features = [
    "multipart",
] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tower = { version = "0.4.13", features = ["util"] }
axum-extra = "0.9.4"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "mysql", "macros", "chrono"] }
validator = { version = "0.18.1", features = ["derive"] }
async-trait = "0.1.83"
axum-valid = "0.18.0"
hyper = "1.4.1"
hyper-util = "0.1.9"
portable-pty = "0.8.1"
tauri-plugin-shell = "2.0.1"
tauri-plugin-sql = "2.0.1"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
